Add partner notification forwarding
